--- a/app.css
+++ b/app.css
@@ -174,6 +174,7 @@ body{
     margin: 20px;
     position: relative;
     transition: .4s ease-in-out;
+    width:30%;
 }
 .banner-img{
     height: auto;
@@ -259,7 +260,7 @@ body{
 }
 .product-list .product-item{
     display: inline-block;
-    max-width: 285px;
+    max-width: 23.5%;
     height: 100%;
     margin-right: 18px;
 }
@@ -413,7 +414,7 @@ body{
     text-align: justify;
 }
 .footer-right{
-    width: 26%;
+    width: 20%;
 }
 .footer-right-content{
     color: #7a7a7a;
