--- a/project_scss/scss/pages/_all.scss
+++ b/project_scss/scss/pages/_all.scss
@@ -1,2 +1,7 @@
-@import 'home';
-@import 'contact-us';
+@import 'header';
+@import 'section-slide';
+@import 'section-banner';
+@import 'section-product';
+@import 'section-blog';
+@import 'footer';
+@import 'responsive';
