--- a/project_scss/scss/styles.css
+++ b/project_scss/scss/styles.css
@@ -962,7 +962,8 @@ table th, table td {
 }
 
 .page-main {
-  padding: .875rem 0rem;
+  padding: 30px 0px;
+  padding: 1.875rem 0rem;
   min-height: 80vh;
 }
 
@@ -1017,7 +1018,6 @@ table th, table td {
   font-size: 1rem;
 }
 
-/* section-slideshow */
 .section-slideshow {
   position: relative;
 }
@@ -1054,7 +1054,7 @@ table th, table td {
 
 .slide-item .slide-content .slide-content-sale {
   font-size: 1.25rem;
-  font-weight: 500;
+  font-weight: 600;
   color: #111;
   position: relative;
   padding-left: 8.125rem;
@@ -1079,7 +1079,7 @@ table th, table td {
 
 .slide-item .slide-content .btn-shop-now {
   padding: 1.25rem 2.5rem;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 1;
   display: inline-block;
   color: #111;
@@ -1095,7 +1095,6 @@ table th, table td {
   color: #fff;
 }
 
-/* section-banner */
 .section-banner {
   margin: 2.5rem 0;
 }
@@ -1152,7 +1151,6 @@ table th, table td {
   font-size: 1rem;
 }
 
-/* section-product */
 .section-product .product-tab-list {
   gap: 1.25rem;
   font-size: 1.25rem;
@@ -1235,7 +1233,7 @@ table th, table td {
   line-height: 1.875rem;
   padding-top: 0.625rem;
   font-size: 1.25rem;
-  font-weight: 100;
+  font-weight: 400;
 }
 
 .product-item .product-item .sale-percent {
@@ -1248,7 +1246,7 @@ table th, table td {
 
 .product-item .product-item-price {
   font-size: 1rem;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 2.5rem;
 }
 
@@ -1256,7 +1254,6 @@ table th, table td {
   color: #379ad7;
 }
 
-/* section-blog */
 .section-blog {
   margin: 2.5rem 0 0 0;
 }
@@ -1264,7 +1261,7 @@ table th, table td {
 .section-blog .blog-title {
   position: relative;
   font-size: 1.25rem;
-  font-weight: 600;
+  font-weight: 400;
   margin: 0;
   text-align: center;
   padding-bottom: 1.25rem;
@@ -1334,7 +1331,7 @@ table th, table td {
 
 .blog-list .blog-item .blog-desc {
   font-size: 1.25rem;
-  font-weight: 600;
+  font-weight: 400;
   background-color: #fff;
   text-align: center;
   padding: 1rem 1.25rem;
@@ -1346,11 +1343,10 @@ table th, table td {
           transform: translate(-50%, -50%);
 }
 
-/* footer */
 .page-footer {
   margin: 2.5rem 0 0 0;
   padding: 3.75rem 0;
-  background: #ccc;
+  background: #e4e4e4;
 }
 
 .page-footer .footer-middle-3-col {
@@ -1363,13 +1359,13 @@ table th, table td {
 .page-footer .footer-right {
   font-size: 1rem;
   font-weight: 400;
-  line-height: 2.5rem;
+  line-height: 3.125rem;
 }
 
 .page-footer .footer-middle-title,
 .page-footer .footer-right-title {
   font-size: 1rem;
-  font-weight: 600;
+  font-weight: 400;
   line-height: 2;
   color: #333;
 }
@@ -1392,8 +1388,8 @@ table th, table td {
 }
 
 .page-footer .footer-right .footer-right-text {
-  font-size: 0.625rem;
-  color: #333;
+  font-size: 0.75rem;
+  color: #111;
   border: none;
   border-bottom: 0.125rem solid #111;
   border-radius: 0;
@@ -1407,7 +1403,7 @@ table th, table td {
   width: auto;
   height: auto;
   text-transform: uppercase;
-  color: #313131;
+  color: #111;
   border: none;
   border-bottom: 0.125rem solid #f1f1f1;
   background: none;
@@ -1428,7 +1424,7 @@ table th, table td {
     right: 8%;
   }
   .banner-list {
-    gap: 10px;
+    gap: 0.625rem;
   }
   .col-3 {
     width: 33.333333334%;
@@ -1460,9 +1456,9 @@ table th, table td {
     right: 25%;
   }
   .slide-content-desc {
-    font-size: 55px;
-    line-height: 70px;
-    font-weight: 100;
+    font-size: 3.125rem;
+    line-height: 4.375rem;
+    font-weight: 600;
   }
   .banner-list {
     -webkit-box-orient: vertical;
@@ -1489,7 +1485,7 @@ table th, table td {
     right: 18%;
   }
   .blog-list {
-    gap: 40px;
+    gap: 2.5rem;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     -webkit-box-pack: start;
@@ -1515,37 +1511,37 @@ table th, table td {
   }
   .page-footer {
     position: relative;
-    padding: 20px 0;
+    padding: 1.25rem 0;
   }
   .page-footer .footer-left {
-    font-size: 15px;
+    font-size: 0.9375rem;
   }
   .page-footer .footer-right {
     width: 10%;
     position: absolute;
     bottom: 0;
     text-align: justify;
-    font-size: 12px;
+    font-size: 0.75rem;
     display: none;
   }
   .page-footer .footer-middle-3-col {
-    padding-bottom: 100px;
+    padding-bottom: 6.25rem;
     width: 70%;
   }
   .page-footer .footer-middle-3-col .footer-middle-title {
-    font-size: 12px;
-    line-height: 25px;
+    font-size: 0.75rem;
+    line-height: 1.5625rem;
   }
   .page-footer .footer-middle-3-col .footer-middle-item {
-    font-size: 12px;
-    line-height: 28px;
+    font-size: 0.75rem;
+    line-height: 1.75rem;
   }
   .slide-item .slide-content {
     right: 4%;
-    font-size: 20px;
+    font-size: 1.25rem;
   }
   .slide-item .slide-content .slide-content-desc {
-    color: ma;
+    color: #e4e4e4;
   }
   .section-slideshow .btn-next {
     right: 10%;
@@ -1555,14 +1551,14 @@ table th, table td {
   }
   .section-blog .blog-title h2::before {
     left: 12%;
-    width: 90px;
+    width: 5.625rem;
   }
   .section-blog .blog-title h2::after {
     right: 12%;
-    width: 90px;
+    width: 5.625rem;
   }
   .product-list .product-item:nth-child(3) {
-    padding-right: 20px;
+    padding-right: 1.25rem;
   }
 }
 /*# sourceMappingURL=styles.css.map */
