--- a/project_scss/scss/pages/_all.scss
+++ b/project_scss/scss/pages/_all.scss
@@ -1,7 +1,2 @@
-@import 'header';
-@import 'section-slide';
-@import 'section-banner';
-@import 'section-product';
-@import 'section-blog';
-@import 'footer';
-@import 'responsive';
+@import 'home';
+
